# self-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  server.py  test_server.py
self_mcp/: __init__.py  cli.py  server.py
self_mcp/prompts/: __init__.py  design_flow.py  troubleshooting.py
self_mcp/resources/: __init__.py  best_practices.py  contract_addresses.py  examples.py
self_mcp/templates/: __init__.py  code_templates.py  error_solutions.py  examples.py  integration_guides.py
self_mcp/tools/: __init__.py  code_generation.py  code_generation.py.backup  config_generation.py  contract_interaction.py  debugging.py  dynamic_docs.py  eu_id_verification.py  integration.py  sdk_setup.py  status.py
self_mcp/utils/: __init__.py  constants.py  constants_abi.py  github_client.py  networks.py
