[project]
name = "self-mcp"
version = "0.1.0"
description = "Self protocol MCP server for developer assistance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["self_mcp"]
